--- a/Volunteer/style.css
+++ b/Volunteer/style.css
@@ -25,6 +25,7 @@ body {
 #website-name {
     font-size:50px;
     color:white;
+    cursor:pointer;
 }
 
 /*ENDING TOP DIV */
@@ -168,6 +169,7 @@ div {
     border-width:0px;
 }
 
+
 input {
     width:300px;
     border-radius:20px;
@@ -179,6 +181,9 @@ input {
 }
 
 .submit-button{
+    transition: color 0.5s;
+    cursor:pointer;
+    
     width:200px;
     height:55px;
     border-radius:20px;
@@ -187,4 +192,11 @@ input {
     background-color:#30B4FF;
     font-size:20px;
 }
+
+.submit-button:hover {
+    transition: color 0.5s;
+    color:black;
+    background-color:lightgray;
+}
+
 
