--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ body {
 #website-name {
     font-size:50px;
     color:white;
+    cursor:pointer;
 }
+
 
 /*ENDING TOP DIV */
 
@@ -127,6 +129,9 @@ input {
 }
 
 .submit-button{
+    transition: color 0.5s;
+    cursor:pointer;
+    
     width:200px;
     height:55px;
     border-radius:20px;
@@ -136,3 +141,8 @@ input {
     font-size:20px;
 }
 
+.submit-button:hover {
+    transition: color 0.5s;
+    color:black;
+    background-color:lightgray;
+}
