--- a/Volunteer/style.css
+++ b/Volunteer/style.css
@@ -1,3 +1,7 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+</style>
+
 body {
     width:100%;
     height:100%;
