--- a/Request/style.css
+++ b/Request/style.css
@@ -1,7 +1,3 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-
 body {
     width:100%;
     height:100%;
@@ -12,12 +8,20 @@ body {
 /*TOP DIV */
 
 #top-div {
+    position:fixed;
+    z-index:1;
     height:90px;
     width:100%;
     
-    background-color:#5F01E8;
+    background: rgb(95,1,232);
+    background: linear-gradient(90deg, rgba(95,1,232,1) 0%, rgba(95,1,232,1) 47%, rgba(0,212,255,1) 100%);
     
     padding:40px;
+    
+    display:flex;
+    flex-direction:row;
+    align-items:center;
+    
 }
 
 #website-name-div {
@@ -30,67 +34,37 @@ body {
     cursor:pointer;
 }
 
-/*ENDING TOP DIV */
-
-/* Sidebar (automatically z-index under top bar) */
-
-#sidebar {
-    height:100%;
-    width:350px;
-        
-    background-color:#DFDFDF;
-    padding:30px;
-    
-    position:fixed;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    
-}
-
-#sidebar-buttons{
+#function-buttons{
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     align-items:center;
+    margin-left:auto;
+    margin-right:auto;
 }
+
 
 #profile-div {
     
     background-color:darkgray;
     
-    width:100%;
+    width:max-content;
+    height:min-content;
+    max-height:90px;
+    
+    
     border-radius:10px;
-    padding:10px;
+    padding:30px;
+    
+    margin-right:50px;
+    
         
     
     display:flex;
-    align-items:flex-end;
     flex-direction:column;
-    
-    margin-bottom:225px;
 }
 
-#sidebar input {
-    background-color:#AD96CE;
-    margin:20px;
-}
 
-/* Ending Sidebar */
 
-/* Message Div */
-
-#message-div {
-    margin-top:25px;
-    display:flex;
-    width:100%;
-    
-    justify-content:center;
-}
-
-#message{
-    font-weight:500;
-}
 
 /* Ending Message Div */
 
@@ -126,9 +100,11 @@ body {
     display:flex;
     align-items:center;
     justify-content:center;
-
+    flex-wrap:wrap;
     
-    padding:50px;
+
+        
+    padding-top:170px; /*MAKE SURE ITS SAME AS TOP BAR WIDTH (including padding) */
 }
 
 
@@ -191,4 +167,9 @@ input {
     transition: color 0.5s;
     color:black;
     background-color:lightgray;
+}
+
+.page-button {
+    background-color:#AD96CE;
+    margin:60px;
 }
