--- a/Request/style.css
+++ b/Request/style.css
@@ -44,8 +44,8 @@ body {
 
 
 #profile-div {
-    
-    background-color:darkgray;
+    color:white;
+    background-color:lightgray;
     
     width:max-content;
     height:min-content;
