--- a/Volunteer/style.css
+++ b/Volunteer/style.css
@@ -49,7 +49,8 @@ body {
 
 #profile-div {
     
-    background-color:darkgray;
+    color:gray;
+    background-color:lightgray;
     
     width:max-content;
     height:min-content;
