--- a/Request/style.css
+++ b/Request/style.css
@@ -9,6 +9,7 @@ body {
 
 /*TOP DIV */
 
+
 #top-div {
     position:fixed;
     z-index:1;
@@ -44,10 +45,15 @@ body {
     margin-right:auto;
 }
 
+#log-out-button {
+    background-color:indianred;
+}
+
 
 #profile-div {
-    color:white;
-    background-color:lightgray;
+    
+    color:black;
+    background-color:white;
     
     width:max-content;
     height:min-content;
@@ -65,7 +71,7 @@ body {
     flex-direction:column;
 }
 
-
+/* Ending Top Div */
 
 
 /* Ending Message Div */
