--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 
+#everything {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
 body {
     width:100%;
     height:100%;
@@ -25,7 +30,7 @@ body {
 
 #website-name-div {
     display:flex;
-    
+    margin-left:100px;
 }
 
 #website-name {
@@ -133,6 +138,14 @@ body {
 
 /* Ending Sign In Div */
 
+
+/* Footer */
+
+#footer-div {
+    margin-bottom:15px;
+}
+
+/* Footer */
 
 
 
