--- a/Request/css/style.css
+++ b/Request/css/style.css
@@ -7,72 +7,6 @@ body {
     margin:0px;
 }
 
-/*TOP DIV */
-
-
-#top-div {
-    position:fixed;
-    z-index:1;
-    height:90px;
-    width:100%;
-    
-    background: rgb(95,1,232);
-    background: linear-gradient(90deg, rgba(95,1,232,1) 0%, rgba(95,1,232,1) 47%, rgba(0,212,255,1) 100%);
-    
-    padding:40px;
-    
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    
-}
-
-#website-name-div {
-    display:flex;
-}
-
-#website-name {
-    font-size:50px;
-    color:white;
-    cursor:pointer;
-}
-
-#function-buttons{
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-#log-out-button {
-    background-color:indianred;
-}
-
-
-#profile-div {
-    
-    color:black;
-    background-color:white;
-    
-    width:max-content;
-    height:min-content;
-    max-height:90px;
-    
-    
-    border-radius:10px;
-    padding:30px;
-    
-    margin-right:50px;
-    
-        
-    
-    display:flex;
-    flex-direction:column;
-}
-
-/* Ending Top Div */
-
 
 /* Ending Message Div */
 
@@ -111,38 +45,10 @@ body {
     flex-wrap:wrap;
     
 
-        
     padding-top:170px; /*MAKE SURE ITS SAME AS TOP BAR WIDTH (including padding) */
 }
 
-
-/* Sign Up Div */
-
-#sign-up-div {
-    
-}
-
-#sign-up {
-    font-size:30px;
-    color:black;
-    font-weight:400;
-}
-
-/* Ending Sign Up Div */
-
-
-/* Sign In Div */
-
-#sign-in-div {
-    
-}
-
-/* Ending Sign In Div */
-
-
-
-
-/*        */
+/* General CSS Styling */
 div {
     border: solid;
     border-width:0px;
