--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,14 @@ input {
     
     font-family:Lato;
 
+
+    Outline: none;
+}
+
+input[type = "text"] {
     padding-left:20px;
     padding-top:5px;
     padding-bottom:5px;
-    Outline: none;
 }
 
 .submit-button{
