--- a/Request/css/style.css
+++ b/Request/css/style.css
@@ -68,6 +68,12 @@ input {
     Outline: none;
 }
 
+input[type = "text"] {
+    padding-left:20px;
+    padding-top:5px;
+    padding-bottom:5px;
+}
+
 .submit-button{
     transition: color 0.5s;
     cursor:pointer;
