Add button styling.

--- a/Request/css/top-bar.css
+++ b/Request/css/top-bar.css
@@ -1,64 +1,68 @@
-/* Styling for the top bar */
+/* CSS for the top navbar */
 
 #top-div {
-    position:fixed;
-    z-index:1;
-    height:90px;
-    width:100%;
-    
-    background: rgb(95,1,232);
-    background: linear-gradient(90deg, rgba(95,1,232,1) 0%, rgba(95,1,232,1) 47%, rgba(0,212,255,1) 100%);
-    
-    padding:40px;
-    
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    
+  position: fixed;
+  z-index: 1;
+  height: 90px;
+  width: 100%;
+
+  background: rgb(95, 1, 232);
+  background: linear-gradient(
+    90deg,
+    rgba(95, 1, 232, 1) 0%,
+    rgba(95, 1, 232, 1) 47%,
+    rgba(0, 212, 255, 1) 100%
+  );
+
+  padding: 40px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 #website-name-div {
-    display:flex;
+  display: flex;
 }
 
 #website-name {
-    font-size:50px;
-    color:white;
-    cursor:pointer;
+  font-size: 50px;
+  color: white;
+  cursor: pointer;
 }
 
-#function-buttons{
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    margin-left:auto;
-    margin-right:auto;
+/* Buttons to return to the request page or volunteer page. */
+#function-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #log-out-button {
-    background-color:indianred;
+  background-color: indianred;
+  border-color: indianred;
 }
 
+#log-out-button:hover {
+  background-color: white;
+  color: indianred;
+}
 
 #profile-div {
-    
-    color:black;
-    background-color:white;
-    
-    width:max-content;
-    height:min-content;
-    max-height:90px;
-    
-    
-    border-radius:10px;
-    padding:30px;
-    
-    margin-right:50px;
-    
-        
-    
-    display:flex;
-    flex-direction:column;
-}
+  color: black;
+  background-color: white;
 
-/* Ending Top Div */
+  width: max-content;
+  height: min-content;
+  max-height: 90px;
+
+  border-radius: 10px;
+  padding: 30px;
+
+  margin-right: 50px;
+
+  display: flex;
+  flex-direction: column;
+}
