--- a/Request/css/style.css
+++ b/Request/css/style.css
@@ -1,99 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 body {
-    width:100%;
-    height:100%;
-    font-family: "Lato";
-    margin:0px;
+  width: 100%;
+  height: 100%;
+  font-family: "Lato";
+  margin: 0px;
 }
-
 
 /* Ending Message Div */
 
-
 .card {
-    display:flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items:center;
-    
-    width:700px;
-    height:max-content;
-    
-    margin:50px;
-    
-    color:#D1CCCC; /*Light gray*/
-    
-    border-color:black;
-    border-width:2px;
-    border-radius:20px;
-    
-    padding-left: 50px;
-    padding-right:50px;
-    padding-top:20px;
-    padding-bottom:30px;
-    
-    font-size:24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 700px;
+  height: max-content;
+
+  margin: 50px;
+
+  color: #d1cccc; /*Light gray*/
+
+  border-color: black;
+  border-width: 2px;
+  border-radius: 20px;
+
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+
+  font-size: 24px;
 }
 
-
-
 #content-div {
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-wrap:wrap;
-    
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 
-    padding-top:170px; /*MAKE SURE ITS SAME AS TOP BAR WIDTH (including padding) */
+  padding-top: 170px; /*MAKE SURE ITS SAME AS TOP BAR WIDTH (including padding) */
 }
 
 /* General CSS Styling */
 div {
-    border: solid;
-    border-width:0px;
+  border: solid;
+  border-width: 0px;
 }
 
 input {
-    width:300px;
-    border-radius:20px;
-    background-color:#F5F5F5;
-    border-width:0px;
-    height:30px;
-    font-size:20px;
-    color:gray;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #f5f5f5;
+  border-width: 0px;
+  height: 30px;
+  font-size: 20px;
+  color: gray;
 
-    padding-top:5px;
-    padding-bottom:5px;
-    Outline: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  outline: none;
 }
 
-input[type = "text"] {
-    padding-left:20px;
-    padding-top:5px;
-    padding-bottom:5px;
+input[type="text"] {
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.submit-button{
-    transition: color 0.5s;
-    cursor:pointer;
-    
-    width:200px;
-    height:55px;
-    border-radius:20px;
-    color:white;
-    font-family:Lato;
-    background-color:#6EDD7F;
-    font-size:20px;
+.submit-button {
+  cursor: pointer;
+  width: 200px;
+  height: 55px;
+
+  transition: color 0.5s, background-color 0.5s;
+
+  border-color: #30b4ff;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 20px;
+
+  color: white;
+  font-family: Lato;
+  background-color: #30b4ff;
+  font-size: 20px;
 }
 
 .submit-button:hover {
-    transition: color 0.5s;
-    color:black;
-    background-color:lightgray;
+  transition: color 0.5s, background-color 0.5s;
+  color: #30b4ff;
+  background-color: white;
 }
 
 .page-button {
-    background-color:#AD96CE;
-    margin:60px;
+  background-color: #ad96ce;
+  border-color: #ad96ce;
+  margin: 60px;
+}
+
+.page-button:hover {
+  transition: 0.5s;
+  color: #ad96ce;
+  background-color: white;
 }
