--- a/Volunteer/css/style.css
+++ b/Volunteer/css/style.css
@@ -1,56 +1,65 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 body {
-    width:100%;
-    height:100%;
-    font-family: "Lato";
-    margin:0px;
+  width: 100%;
+  height: 100%;
+  font-family: "Lato";
+  margin: 0px;
 }
 
 /*General CSS Styling*/
 div {
-    border: solid;
-    border-width:0px;
+  border: solid;
+  border-width: 0px;
 }
 
-
 input {
-    width:300px;
-    border-radius:20px;
-    background-color:#F5F5F5;
-    border-width:0px;
-    height:30px;
-    font-size:20px;
-    color:gray;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #f5f5f5;
+  border-width: 0px;
+  height: 30px;
+  font-size: 20px;
+  color: gray;
 
-    padding-top:5px;
-    padding-bottom:5px;
-    Outline: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  outline: none;
 }
 
 .submit-button {
-    transition: color 0.5s;
-    cursor:pointer;
-    
-    width:200px;
-    height:55px;
-    border-radius:20px;
-    color:white;
-    font-family:Lato;
-    background-color:#30B4FF;
-    font-size:20px;
+  cursor: pointer;
+  width: 200px;
+  height: 55px;
+
+  transition: color 0.5s, background-color 0.5s;
+
+  border-color: #30b4ff;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 20px;
+
+  color: white;
+  font-family: Lato;
+  background-color: #30b4ff;
+  font-size: 20px;
 }
 
 .submit-button:hover {
-    transition: color 0.5s;
-    color:black;
-    background-color:lightgray;
+  transition: color 0.5s, background-color 0.5s;
+  color: #30b4ff;
+  background-color: white;
 }
 
-
 .page-button {
-    background-color:#AD96CE;
-    margin:60px;
+  background-color: #ad96ce;
+  border-color: #ad96ce;
+  margin: 60px;
+}
+
+.page-button:hover {
+  transition: 0.5s;
+  background-color: white;
+  color: #ad96ce;
+  margin: 60px;
 }
