--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 #everything {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 body {
-    width:100%;
-    height:100%;
-    font-family: "Lato";
-    margin:0px;
-    overflow-x:hidden;
+  width: 100%;
+  height: 100%;
+  font-family: "Lato";
+  margin: 0px;
+  overflow-x: hidden;
 }
 
 #footer-div {
-    margin-bottom:15px;
+  margin-bottom: 15px;
 }
 
 /* Styling for general elements */
 div {
-    border: solid;
-    border-width:0px;
+  border: solid;
+  border-width: 0px;
 }
 
 input {
-    width:300px;
-    border-radius:20px;
-    background-color:#F5F5F5;
-    border-width:0px;
-    height:30px;
-    font-size:20px;
-    color:gray;
-    
-    font-family:Lato;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #f5f5f5;
 
+  height: 30px;
+  font-size: 20px;
+  color: gray;
 
-    Outline: none;
+  transition: border-color 0.5s;
+  border-width: 2px;
+  border-color: lightgray;
+  border-style: solid;
+
+  font-family: Lato;
+
+  outline: none;
 }
 
-input[type = "text"] {
-    padding-left:20px;
-    padding-top:5px;
-    padding-bottom:5px;
+input[type="text"] {
+  padding-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.submit-button{
-    transition: color 0.5s;
-    cursor:pointer;
-    
-    width:200px;
-    height:55px;
-    border-radius:20px;
-    color:white;
-    font-family:Lato;
-    background-color:#6EDD7F;
-    font-size:20px;
+input[type="text"]:focus {
+  transition: border-color 0.5s;
+  border-color: lightblue;
+}
+
+.submit-button {
+  transition: color 0.5s, background-color 0.5s;
+  cursor: pointer;
+
+  width: 200px;
+  height: 55px;
+  border-style: solid;
+  border-color: #6edd7f;
+  border-width: 2px;
+  border-radius: 20px;
+  color: white;
+  font-family: Lato;
+  background-color: #6edd7f;
+  font-size: 20px;
 }
 
 .submit-button:hover {
-    transition: color 0.5s;
-    color:black;
-    background-color:lightgray;
+  transition: color 0.5s, background-color 0.5s;
+  color: #6edd7f;
+  background-color: white;
 }
