Add small button transform.

--- a/Request/css/style.css
+++ b/Request/css/style.css
@@ -93,6 +93,11 @@ input[type="text"] {
   background-color: white;
 }
 
+.submit-button:active {
+  transform: scale(0.9);
+}
+
+
 .page-button {
   background-color: #ad96ce;
   border-color: #ad96ce;
